# pythole

./: .cruft.json  README.md  environment.yaml  install.sh  make_env.bash  pyproject.toml
pythole/: damping.py  databases.py  dipole_io.py  dipoles.py  plot_thole.py  summary.py  thole_energy.py  thole_energy_estimation.py  thole_example.py  thole_simple.py  thole_simple_paper_script.py  utils.py
tests/: test_dipoles.py  test_fast.py  test_water.py
